--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,15 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <p class="view">New people please share your contact info here: <a href="http://bit.ly/h4wm-register">http://bit.ly/h4wm-register</a></p>
+
+
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <!--<p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>-->
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <!--<p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>-->
         {% endif %}
 
         {% if site.show_downloads %}
