--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
     {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/h4wm.css">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -20,9 +21,12 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <h3>{{ site.description | default: site.github.project_tagline }}</h3>
 
-        <p class="view">New people please share your contact info here: <a href="http://bit.ly/h4wm-register">http://bit.ly/h4wm-register</a></p>
+        <p>Do you know an organization working on issues that affect our community that could use help from local technology professionals? We want to help you!</p>
+        <p><button>Propose a Project</button></p>
+
+        <p>Interested in participating? Look for the next meeting <a href="https://www.meetup.com/wmasswebdev/">on MeetUp</a>. In the meantime, tell us a little <a href="http://bit.ly/h4wm-register">about yourself.</a></p>
 
 
         {% if site.github.is_project_page %}
@@ -33,13 +37,7 @@
         <!--<p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>-->
         {% endif %}
 
-        {% if site.show_downloads %}
-        <ul>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+
     </header>
     <section>
 
@@ -47,11 +45,11 @@
 
     </section>
     <footer>
-        <!--
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        -->
+        <h2>Find Us</h2>
+        <a href="https://github.com/hackforwesternmass"><img src="assets/img/Github-Mark-32px.png" alt="GitHub"/></a>
+        <a href="https://twitter.com/hackforwestma"><img src="assets/img/Twitter_Social_Icon_Circle_Color.png" alt="Twitter"/></a>
+        <a href="https://www.facebook.com/HackForWesternMass/"><img src="assets/img/f-ogo_RGB_HEX-58.png" alt="Facebook"></a>
+        <a href="https://h4wm.slack.com"><img src="assets/img/Slack_Mark_Web.png" alt="Slack"/></a>
     </footer>
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
