--- a/assets/css/h4wm.css
+++ b/assets/css/h4wm.css
@@ -1,12 +1,14 @@
-button {
+.button {
     background-color: #00a1e4;
     padding: 5px 20px;
     border: 0;
     color: #fff;
     font-size: 1rem;
 }
-button:hover {
+.button:hover {
     background-color: #d1223b;
+    color: #fff;
+    font-weight: inherit;
 }
 iframe {
     max-width: 100%;
