--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
         <p>Do you know an organization working on issues that affect our community that could use help from local technology professionals? We can help you.</p>
         <p><a class="button" href="https://andrew629.typeform.com/to/qw4KPm">Propose a Project</a></p>
 
-        <p>Interested in participating? Look for the next meeting <a href="https://www.meetup.com/wmasswebdev/">on MeetUp</a>. In the meantime, tell us a little <a href="http://bit.ly/h4wm-register">about yourself.</a></p>
+        <h3>Interested in participating?</h3>
+        <p>Look for the next meeting <a href="https://www.meetup.com/wmasswebdev/">on MeetUp</a>. In the meantime, tell us a little <a href="http://bit.ly/h4wm-register">about yourself.</a></p>
 
 
         {% if site.github.is_project_page %}
